--- a/src/main/resources/ku/cs/applyToBeASeller.fxml
+++ b/src/main/resources/ku/cs/applyToBeASeller.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -174,76 +175,40 @@
 
       <Line endX="500.666748046875" endY="1.52587890625E-5" layoutX="450.0" layoutY="161.0" startX="-100.0" stroke="#7e4811" />
 
-      <Label layoutX="350.0" layoutY="197.0" text="ชื่อร้านค้า">
+                  <Button fx:id="submitButton" layoutX="560.0" layoutY="600.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="194.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="สมัครเป็นผู้ขาย" textFill="WHITE">
+         <font>
+            <Font name="JasmineUPC" size="30.0" />
+         </font>
+      </Button>
+
+      <Label layoutX="370.0" layoutY="220.0" text="ชื่อร้านค้า">
          <font>
             <Font name="JasmineUPC" size="32.0" />
          </font>
       </Label>
 
-      <Label layoutX="681.0" layoutY="196.0" text="รายละเอียดเพิ่มเติม">
+      <Label layoutX="370.0" layoutY="370.0" text="ยืนยันการสมัคร">
          <font>
             <Font name="JasmineUPC" size="30.0" />
          </font>
       </Label>
 
-      <Label layoutX="350.0" layoutY="310.0" text="ช่องทางการติดต่อ">
+      <TextField fx:id="nameShopTextField" layoutX="380.0" layoutY="270.0" prefHeight="40.0" prefWidth="550.0" promptText="ชื่อร้านค้าของคุน" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
          <font>
-            <Font name="JasmineUPC" size="30.0" />
+            <Font name="JasmineUPC" size="18.0" />
+         </font>
+      </TextField>
+      <PasswordField layoutX="380.0" layoutY="440.0" prefHeight="40.0" prefWidth="550.0" promptText="password" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;" />
+      <Label layoutX="380.0" layoutY="420.0" text="* กรุณากรอกรหัสผ่านเพื่อยืนยัน" textFill="#fc0202">
+         <font>
+            <Font name="JasmineUPC" size="18.0" />
          </font>
       </Label>
-
-      <TextField fx:id="nameShopTextField" layoutX="350.0" layoutY="233.0" prefHeight="34.0" prefWidth="271.0" promptText="ชื่อร้านค้าของคุน" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
+      <PasswordField layoutX="380.0" layoutY="520.0" prefHeight="40.0" prefWidth="550.0" promptText="password" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;" />
+      <Label layoutX="380.0" layoutY="500.0" text="* กรุณากรอกรหัสผ่านเพื่อยืนยันอีกครั้ง" textFill="#fc0202">
          <font>
             <Font name="JasmineUPC" size="18.0" />
-         </font>
-      </TextField>
-
-      <TextField fx:id="addressShopTextField" layoutX="350.0" layoutY="356.0" prefHeight="34.0" prefWidth="521.0" promptText="ที่อยู่ที่สามารถติดต่อได้" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
-         <font>
-            <Font name="JasmineUPC" size="18.0" />
-         </font>
-      </TextField>
-
-      <TextField fx:id="detailShopTextField" layoutX="679.0" layoutY="233.0" prefHeight="34.0" prefWidth="271.0" promptText="อธิบายรายละเอียดร้านพอสังเขป" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
-         <font>
-            <Font name="JasmineUPC" size="18.0" />
-         </font>
-      </TextField>
-
-      <TextField fx:id="mailShopTextField" layoutX="350.0" layoutY="420.0" prefHeight="34.0" prefWidth="521.0" promptText="E-mail ของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
-         <font>
-            <Font name="JasmineUPC" size="18.0" />
-         </font>
-      </TextField>
-
-      <TextField fx:id="telShopTextField" layoutX="350.0" layoutY="480.0" prefHeight="34.0" prefWidth="521.0" promptText="เบอร์โทรติดต่อของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
-          <font>
-            <Font name="JasmineUPC" size="19.0" />
-         </font>
-      </TextField>
-
-      <TextField fx:id="bankShopTextField" layoutX="350.0" layoutY="600.0" prefHeight="34.0" prefWidth="513.0" promptText="เลขบัญชีของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
-         <font>
-            <Font name="JasmineUPC" size="18.0" />
-         </font>
-      </TextField>
-
-      <Label layoutX="350.0" layoutY="555.0" text="ช่องทางการโอนเงิน">
-         <font>
-            <Font name="JasmineUPC" size="30.0" />
          </font>
       </Label>
-
-      <Button fx:id="submitButton" layoutX="530.0" layoutY="670.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="194.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="สมัครเป็นผู้ขาย" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="30.0" />
-         </font>
-      </Button>
-
-      <Button layoutX="775.0" layoutY="356.0" mnemonicParsing="false" style="-fx-background-color: FFFCF1;" text="ใช้ที่อยู่เริ่มต้น" textFill="RED">
-         <font>
-            <Font name="JasmineUPC" size="18.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
