--- a/src/main/resources/ku/cs/information.fxml
+++ b/src/main/resources/ku/cs/information.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.InformationController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.DetailUser">
    <children>
       <HBox layoutX="65.0" layoutY="236.0" prefHeight="250.0" prefWidth="1024.0" AnchorPane.leftAnchor="0.0">
          <children>
