--- a/src/main/resources/ku/cs/editPasswordDetail.fxml
+++ b/src/main/resources/ku/cs/editPasswordDetail.fxml
@@ -69,7 +69,7 @@
                         <Font size="15.0" />
                      </font>
                      <graphic>
-                        <Label fx:id="userNameLabel" prefHeight="27.0" prefWidth="100.0" stylesheets="@style/PrimaryTheme.css" text="Username" textFill="WHITE" wrapText="true">
+                        <Label fx:id="usernameInHeadLabel" prefHeight="27.0" prefWidth="100.0" stylesheets="@style/PrimaryTheme.css" text="Username" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="JasmineUPC" size="36.0" />
                            </font>
