--- a/src/main/resources/ku/cs/seller.fxml
+++ b/src/main/resources/ku/cs/seller.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -35,12 +34,12 @@
                   </ImageView>
                   <MenuButton mnemonicParsing="false" prefHeight="35.0" prefWidth="134.0" style="-fx-background-color: #c9ad88;" text="ประเภท" textFill="WHITE">
                      <items>
-                        <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" text="หนังสือการ์ตูน" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleMagazineButton" text="นิตยสาร" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleMagazineButton" text="นิยาย" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" text="หนังสือเรียน" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" text="e-book" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleAllTypeBookButton" text="ทั้งหมด" />
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" text="หนังสือการ์ตูน" />-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleMagazineButton" text="นิตยสาร" />-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleMagazineButton" text="นิยาย" />-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" text="หนังสือเรียน" />-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" text="e-book" />-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleAllTypeBookButton" text="ทั้งหมด" />-->
                      </items>
                      <font>
                         <Font name="JasmineUPC" size="25.0" />
@@ -187,70 +186,102 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Button>
-                        <Label layoutX="50.0" layoutY="330.0" text="ชื่อสินค้า">
+                        <Label layoutX="50.0" layoutY="330.0" text="ชื่อหนังสือ">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <Label layoutX="375.0" layoutY="330.0" text="ราคาสินค้า">
+                        <Label layoutX="375.0" layoutY="330.0" text="ชื่อผู้แต่ง">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
                         <TextField fx:id="bookNameTextField" layoutX="55.0" layoutY="360.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-                        <TextField fx:id="bookPriceTextField" layoutX="380.0" layoutY="360.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-                        <Label layoutX="50.0" layoutY="425.0" text="จำนวนสินค้าในคลัง">
+                        <TextField fx:id="bookAuthorTextField" layoutX="380.0" layoutY="360.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <Label layoutX="50.0" layoutY="425.0" text="รหัส ISBN">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <Label layoutX="375.0" layoutY="425.0" text="หมวดหมู่ของสินค้า">
+                        <Label layoutX="375.0" layoutY="425.0" text="ประเภทหนังสือ">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookStockTextField" layoutX="55.0" layoutY="455.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <TextField fx:id="bookISBNTextField" layoutX="55.0" layoutY="455.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
                         <TextField fx:id="bookTypeTextField" layoutX="380.0" layoutY="455.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-                        <Label layoutX="50.0" layoutY="840.0" text="รายละเอียดสินค้า">
+                        <Label layoutX="50.0" layoutY="805.0" text="รายละเอียดสินค้า">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <Button fx:id="addBookButton" layoutX="375.0" layoutY="880.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="เพิ่มสินค้า" textFill="WHITE">
+                        <Button fx:id="addBookButton" layoutX="375.0" layoutY="845.0" mnemonicParsing="false" onAction="#handleAddBookButton" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="เพิ่มสินค้า" textFill="WHITE">
                            <font>
                               <Font size="20.0" />
                            </font>
                         </Button>
-                        <Label layoutX="375.0" layoutY="520.0" text="หมวดหมู่ของสินค้า">
+                        <Label layoutX="375.0" layoutY="520.0" text="จำนวนหน้า">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookStockTextField" layoutX="380.0" layoutY="550.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-                        <Button fx:id="addBookButton1" layoutX="375.0" layoutY="920.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="สินค้าทั้งหมด" textFill="WHITE">
+                        <TextField fx:id="bookPageTextField" layoutX="380.0" layoutY="550.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <Button fx:id="goToSellerStockButton" layoutX="375.0" layoutY="905.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="สินค้าทั้งหมด" textFill="WHITE">
                            <font>
                               <Font size="20.0" />
                            </font>
                         </Button>
-                        <TextArea fx:id="bookDetailTextArea" layoutX="55.0" layoutY="850.0" prefHeight="130.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
-                        <Label layoutX="50.0" layoutY="520.0" text="จำนวนสินค้าในคลัง">
+                        <TextArea fx:id="bookDetailTextArea" layoutX="55.0" layoutY="835.0" prefHeight="130.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
+                        <Label layoutX="50.0" layoutY="520.0" text="สำนักพิมพ์">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookStockTextField1" layoutX="55.0" layoutY="550.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <TextField fx:id="bookPublisherTextField" layoutX="55.0" layoutY="550.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
                         <Label layoutX="50.0" layoutY="615.0" text="จำนวนสินค้าในคลัง">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <Label layoutX="375.0" layoutY="615.0" text="หมวดหมู่ของสินค้า">
+                        <Label layoutX="375.0" layoutY="615.0" text="จำนวนสินค้าขั้นต่ำในคลัง">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookStockTextField11" layoutX="55.0" layoutY="645.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-                        <TextField fx:id="bookStockTextField2" layoutX="390.0" layoutY="645.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <TextField fx:id="bookStockTextField" layoutX="55.0" layoutY="645.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <TextField fx:id="leastStockTextField" layoutX="380.0" layoutY="645.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <Label layoutX="50.0" layoutY="710.0" text="สถานะหนังสือ">
+                           <font>
+                              <Font name="JasmineUPC" size="32.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="bookStatusTextField" layoutX="55.0" layoutY="740.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <Label layoutX="375.0" layoutY="710.0" text="ราคาหนังสือ">
+                           <font>
+                              <Font name="JasmineUPC" size="32.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="bookPriceTextField" layoutX="380.0" layoutY="740.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <Label fx:id="NotificationBookISBN" layoutX="55.0" layoutY="495.0" textFill="#f20505">
+                           <font>
+                              <Font name="JasmineUPC" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="NotificationBookPage" layoutX="387.0" layoutY="591.0" textFill="#f20505">
+                           <font>
+                              <Font name="JasmineUPC" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="NotificationBookStock" layoutX="55.0" layoutY="690.0" textFill="#f20505">
+                           <font>
+                              <Font name="JasmineUPC" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="NotificationLeastStock" layoutX="380.0" layoutY="690.0" textFill="#f20505">
+                           <font>
+                              <Font name="JasmineUPC" size="12.0" />
+                           </font>
+                        </Label>
                      </children>
                   </AnchorPane>
                </content>
