--- a/src/main/resources/ku/cs/seller.fxml
+++ b/src/main/resources/ku/cs/seller.fxml
@@ -282,6 +282,11 @@
                               <Font name="JasmineUPC" size="12.0" />
                            </font>
                         </Label>
+                        <Label fx:id="NotificationCantAdd" layoutX="55.0" layoutY="980.0" textFill="#f20505">
+                           <font>
+                              <Font name="JasmineUPC" size="24.0" />
+                           </font>
+                        </Label>
                      </children>
                   </AnchorPane>
                </content>
