--- a/src/main/resources/ku/cs/aboutUs.fxml
+++ b/src/main/resources/ku/cs/aboutUs.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
@@ -8,7 +9,7 @@
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: C9AD88;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.scene.AboutUsController">
    <children>
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#ffffffcb" height="728.0" strokeType="INSIDE" width="994.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0" />
-      <Line endX="827.9595336914062" endY="-7.62939453125E-6" layoutX="144.0" layoutY="65.0" startX="-100.0" AnchorPane.leftAnchor="42.0" AnchorPane.rightAnchor="42.0" />
+      <Line endX="802.8929443359375" endY="-7.62939453125E-6" layoutX="144.0" layoutY="65.0" startX="-100.0" AnchorPane.leftAnchor="42.0" AnchorPane.rightAnchor="42.0" />
       <Button fx:id="aboutUsButton" layoutX="31.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleAboutUsButton" style="-fx-background-color: transparent;" text="เกี่ยวกับกลุ่มผู้พัฒนา">
          <font>
             <Font name="JasmineUPC" size="24.0" />
@@ -31,5 +32,10 @@
             </GridPane>
          </children>
       </HBox>
+      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="965.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#handleBackToHome">
+         <image>
+            <Image url="@image/BackIcon.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
