--- a/src/main/resources/ku/cs/aboutUsChoice.fxml
+++ b/src/main/resources/ku/cs/aboutUsChoice.fxml
@@ -1,29 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="651.0" prefWidth="940.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.scene.AboutUsChoiceController">
+<AnchorPane prefHeight="651.0" prefWidth="940.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.scene.AboutUsChoiceController">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox maxHeight="250.0" minHeight="250.0" prefHeight="260.0" prefWidth="200.0">
                <children>
-                  <GridPane maxWidth="200.0" minWidth="200.0" prefHeight="260.0" prefWidth="200.0">
+                  <GridPane maxWidth="200.0" minWidth="200.0" onMouseClicked="#handleChoice1Click" prefHeight="260.0" prefWidth="200.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                      </columnConstraints>
@@ -74,7 +64,7 @@
                      </children>
                   </GridPane>
                   <Pane minWidth="46.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: transparent;" HBox.hgrow="ALWAYS" />
-                  <GridPane maxWidth="200.0" minWidth="200.0" prefHeight="260.0" prefWidth="200.0">
+                  <GridPane maxWidth="200.0" minWidth="200.0" onMouseClicked="#handleChoice2Click" prefHeight="260.0" prefWidth="200.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                      </columnConstraints>
@@ -127,7 +117,7 @@
                      </children>
                   </GridPane>
                   <Pane minWidth="46.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: transparent;" HBox.hgrow="ALWAYS" />
-                  <GridPane maxWidth="200.0" minWidth="200.0" prefHeight="260.0" prefWidth="200.0">
+                  <GridPane maxWidth="200.0" minWidth="200.0" onMouseClicked="#handleChoice3Click" prefHeight="260.0" prefWidth="200.0">
                      <columnConstraints>
                         <ColumnConstraints />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -181,7 +171,7 @@
                      </children>
                   </GridPane>
                   <Pane minWidth="46.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: transparent;" HBox.hgrow="ALWAYS" />
-                  <GridPane maxWidth="200.0" minWidth="200.0" prefHeight="260.0" prefWidth="200.0">
+                  <GridPane maxWidth="200.0" minWidth="200.0" onMouseClicked="#handleChoice4Click" prefHeight="260.0" prefWidth="200.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                      </columnConstraints>
@@ -235,10 +225,10 @@
                   </GridPane>
                </children>
             </HBox>
-            <Pane maxHeight="30.0" minHeight="30.0" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+            <Pane maxHeight="5.0" minHeight="5.0" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
             <Pane maxHeight="371.0" minHeight="371.0" prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <GridPane fx:id="gridInfo" prefHeight="0.0" prefWidth="748.0">
+                  <GridPane fx:id="gridInfo" alignment="CENTER" maxWidth="6.0" prefHeight="0.0">
                      <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
