--- a/src/main/resources/ku/cs/login.fxml
+++ b/src/main/resources/ku/cs/login.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: BC986A;" stylesheets="@style/PrimaryTheme.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.LoginController">
    <children>
-      <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#fffae9" height="338.0" layoutX="-7.0" layoutY="430.0" stroke="#fffae9" strokeType="INSIDE" width="1050.0" />
+      <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#fffae9" height="338.0" layoutX="-7.0" layoutY="430.0" stroke="#fffae9" strokeType="INSIDE" styleClass="bevel-grey" width="1050.0" />
       <QuadCurve controlX="54.26666259765625" controlY="-129.99998474121094" endX="155.13330078125" endY="-6.66668701171875" fill="#fffae9" layoutX="62.0" layoutY="448.0" startX="-83.80001831054688" startY="-16.26666259765625" stroke="#fffae9" strokeType="INSIDE" />
       <QuadCurve controlX="2.066619873046875" controlY="75.60000610351562" endX="157.26663208007812" endY="-5.20001220703125" fill="#bc986a" layoutX="274.0" layoutY="434.0" startX="-84.06668090820312" startY="-21.4666748046875" stroke="#bc986a" strokeType="INSIDE" />
       <QuadCurve controlX="41.79998779296875" controlY="-98.33331298828125" endX="113.933349609375" endY="-34.333343505859375" fill="#fffae9" layoutX="472.0" layoutY="473.0" startX="-65.3333740234375" startY="-30.066680908203125" stroke="#fffae9" strokeType="INSIDE" />
@@ -33,7 +33,7 @@
          <font>
             <Font name="JasmineUPC" size="13.0" />
          </font></TextField>
-      <Button layoutX="699.0" layoutY="466.0" mnemonicParsing="false" onAction="#handleLoginButton" prefHeight="52.0" prefWidth="127.0" style="-fx-background-color: B78748; -fx-background-radius: 20;" text="เข้าสู่ระบบ" textAlignment="CENTER" textFill="WHITE">
+      <Button cache="true" cacheHint="SCALE" layoutX="699.0" layoutY="466.0" mnemonicParsing="false" onAction="#handleLoginButton" prefHeight="52.0" prefWidth="127.0" styleClass="bevel-grey" stylesheets="@style/PrimaryTheme.css" text="เข้าสู่ระบบ" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="JasmineUPC Bold" size="24.0" />
          </font>
