--- a/src/main/resources/ku/cs/home.fxml
+++ b/src/main/resources/ku/cs/home.fxml
@@ -1,22 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.HomeController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.HomeController">
    <children>
       <BorderPane layoutX="-1.0" layoutY="1.0" prefHeight="768.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -52,18 +42,13 @@
                      <HBox.margin>
                         <Insets left="30.0" right="-20.0" top="13.0" />
                      </HBox.margin>
-<<<<<<< HEAD
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="174.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;">
-=======
-                  </Label>
                   <Button mnemonicParsing="false" onAction="#handleToInformationButton" prefHeight="37.0" prefWidth="157.0" style="-fx-background-color: F99F28;">
->>>>>>> 2de1c586eaa32e322b8787c17521cce75621a99d
                      <font>
                         <Font size="15.0" />
                      </font>
                      <graphic>
-                        <Label fx:id="userNameLabel1" prefHeight="27.0" prefWidth="100.0" style="-fx-background-radius: 20;" stylesheets="@style/PrimaryTheme.css" text="Username" textFill="WHITE" wrapText="true">
+                        <Label fx:id="usernameLabel" prefHeight="27.0" prefWidth="100.0" style="-fx-background-radius: 20;" stylesheets="@style/PrimaryTheme.css" text="Username" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="JasmineUPC" size="36.0" />
                            </font>
